--- a/components/ui/hamburger/HamburgerMenu.module.scss
+++ b/components/ui/hamburger/HamburgerMenu.module.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: flex-start;
   background-image: var(--background-image);
+  overflow: hidden;
 }
 
 @media (max-width: 640px) {
